完善登陆过程

--- a/views/member/login.ejs
+++ b/views/member/login.ejs
@@ -66,6 +66,12 @@
                 data: {
                     username: username,
                     password: password
+                },
+                error: function (result) {
+                    alert(result)
+                },
+                success: function(result) {
+                    alert(result)
                 }
             });
         });
