添加皮肤管理界面，添加退出功能，修正ejs模板的手残

--- a/views/member/login.ejs
+++ b/views/member/login.ejs
@@ -67,11 +67,12 @@
                     username: username,
                     password: password
                 },
-                error: function (result) {
-                    alert(result)
-                },
                 success: function(result) {
-                    alert(result)
+                    alert(result);
+                    location.href = "/member/home";
+                },
+                error: function (result) {
+                    alert(result);
                 }
             });
         });
