皮肤上传\管理页面开坑

--- a/views/member/home.ejs
+++ b/views/member/home.ejs
@@ -31,24 +31,22 @@
                             </div>
                             <div class="form-bottom">
                                 <div class="input-group input-group-lg">
-                                    <span class="input-group-addon">游戏ID</span>
-                                    <span id="playername" class="form-control"></span>
+                                    <span class="input-group-addon">用户名</span>
+                                    <span id="playername" class="form-control"><%- username %></span>
                                 </div>
                                 <div class="input-group input-group-lg">
                                     <span class="input-group-addon">&nbsp;&nbsp;皮肤&nbsp;&nbsp;</span>
-                                    <span id="Stevemodel" class="form-control"></span>
-                            <span class="input-group-btn">
-                                <button id="uploadSteveModel" class="btn btn-blue" type="button">上传</button>
-                                <button id="removeSteveModel" class="btn btn-blue" type="button">重置</button>
-                            </span>
+                                    <span class="input-group-btn">
+                                        <button id="uploadSteveModel" class="btn btn-blue" type="button">上传</button>
+                                        <button id="removeSteveModel" class="btn btn-blue" type="button">重置</button>
+                                    </span>
                                 </div>
                                 <div class="input-group input-group-lg">
                                     <span class="input-group-addon">&nbsp;&nbsp;披风&nbsp;&nbsp;</span>
-                                    <span id="Capemodel" class="form-control"></span>
-                            <span class="input-group-btn">
-                                <button id="uploadCapeModel" class="btn btn-blue" type="button">上传</button>
-                                <button id="removeCapeModel" class="btn btn-blue" type="button">重置</button>
-                            </span>
+                                    <span class="input-group-btn">
+                                        <button id="uploadCapeModel" class="btn btn-blue" type="button">上传</button>
+                                        <button id="removeCapeModel" class="btn btn-blue" type="button">重置</button>
+                                    </span>
                                 </div>
                             </div>
                         </div>
