修正登陆日志的记录，顺便修正登陆模板ajax返回方式不科学的问题

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -117,7 +117,7 @@ img {
     color: #FFFFFF;
 }
 
-/*Ö÷¿ò¼Ü*/
+/*ï¿½ï¿½ï¿½ï¿½ï¿½*/
 .inner-bg {
     padding: 100px 0 170px 0;
 }
@@ -179,7 +179,7 @@ img {
 }
 
 .form-top-left .error-msg {
-    color: #fd503d;
+    color: #F8FD3D;
 }
 
 .form-top-right {
@@ -261,7 +261,7 @@ img {
     margin-top: 25px;
 }
 
-/*Ã½Ìå²éÑ¯ ×öÏìÓ¦Ê½ÊÊÅä*/
+/*Ã½ï¿½ï¿½ï¿½Ñ¯ ï¿½ï¿½ï¿½ï¿½Ó¦Ê½ï¿½ï¿½ï¿½ï¿½*/
 
 @media (min-width: 992px) and (max-width: 1199px) {
 }
