--- a/views/member/home.ejs
+++ b/views/member/home.ejs
@@ -18,52 +18,54 @@
         <div class="container">
             <%- include ../global/header.ejs %>
             <div class="row" id="login-div">
-                <div class="col-sm-6 col-sm-offset-3 form-box">
-                    <div class="row" id="info-div">
-                        <div class="col-sm-6 col-sm-offset-3 form-box">
-                            <div class="form-top">
-                                <div class="form-top-left">
-                                    <h3>基本信息</h3>
-                                </div>
-                                <div class="form-top-right">
-                                    <i class="fa fa-info-circle"></i>
-                                </div>
+                <div class="row" id="info-div">
+                    <div class="col-sm-6 col-sm-offset-3 form-box">
+                        <div class="form-top">
+                            <div class="form-top-left">
+                                <h3>基本信息</h3>
+
+                                <p><span id="login-error" class="error-msg"></span></p>
                             </div>
-                            <div class="form-bottom">
-                                <div class="input-group input-group-lg">
-                                    <span class="input-group-addon">用户名</span>
-                                    <span id="playername" class="form-control"><%- username %></span>
-                                </div>
-                                <div class="input-group input-group-lg">
-                                    <span class="input-group-addon">&nbsp;&nbsp;皮肤&nbsp;&nbsp;</span>
-                                    <span class="input-group-btn">
-                                        <button id="uploadSteveModel" class="btn btn-blue" type="button">上传</button>
-                                        <button id="removeSteveModel" class="btn btn-blue" type="button">重置</button>
-                                    </span>
-                                </div>
-                                <div class="input-group input-group-lg">
-                                    <span class="input-group-addon">&nbsp;&nbsp;披风&nbsp;&nbsp;</span>
-                                    <span class="input-group-btn">
-                                        <button id="uploadCapeModel" class="btn btn-blue" type="button">上传</button>
-                                        <button id="removeCapeModel" class="btn btn-blue" type="button">重置</button>
-                                    </span>
-                                </div>
+                            <div class="form-top-right">
+                                <i class="fa fa-info-circle"></i>
+                            </div>
+                        </div>
+                        <div class="form-bottom">
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-addon">用户名</span>
+                                <span id="playername" class="form-control"><%- username %></span>
+                            </div>
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-addon">&nbsp;&nbsp;皮肤&nbsp;&nbsp;</span>
+                                <span id="Stevemodel" class="form-control">未上传</span>
+                                <span class="input-group-btn">
+                                    <button id="uploadSteveModel" class="btn btn-blue" type="button">上传</button>
+                                    <button id="removeSteveModel" class="btn btn-blue" type="button">重置</button>
+                                </span>
+                            </div>
+                            <div class="input-group input-group-lg">
+                                <span class="input-group-addon">&nbsp;&nbsp;披风&nbsp;&nbsp;</span>
+                                <span id="Capemodel" class="form-control">未上传</span>
+                                <span class="input-group-btn">
+                                    <button id="uploadCapeModel" class="btn btn-blue" type="button">上传</button>
+                                    <button id="removeCapeModel" class="btn btn-blue" type="button">重置</button>
+                                </span>
                             </div>
                         </div>
                     </div>
-                    <div class="row" id="img-div">
-                        <div class="col-sm-6 col-sm-offset-3 form-box">
-                            <div class="form-top">
-                                <div class="form-top-left">
-                                    <h3>预览</h3>
-                                </div>
-                                <div class="form-top-right">
-                                    <i class="fa fa-image"></i>
-                                </div>
+                </div>
+                <div class="row" id="img-div">
+                    <div class="col-sm-6 col-sm-offset-3 form-box">
+                        <div class="form-top">
+                            <div class="form-top-left">
+                                <h3>预览</h3>
                             </div>
-                            <div class="form-bottom">
-                                <img id="preview-img" src=""/>
+                            <div class="form-top-right">
+                                <i class="fa fa-image"></i>
                             </div>
+                        </div>
+                        <div class="form-bottom">
+                            <img id="preview-img" src=""/>
                         </div>
                     </div>
                 </div>
