--- a/views/member/home.ejs
+++ b/views/member/home.ejs
@@ -73,7 +73,7 @@
         </div>
         <%- include ../global/footer.ejs %>
     </div>
-    <input type="file" name='file' id='filechoose' style="display: none;"/>
+    <input type="file" name='skins' id='filechoose' style="display: none;"/>
 </div>
 
 <!-- Include bottom.ejs Start-->
