--- a/views/include/bottom.ejs
+++ b/views/include/bottom.ejs
@@ -1,4 +1,4 @@
-<script src="/js/jquery-1.11.1.js"></script>
+<script src="http://libs.useso.com/js/jquery/2.1.1-rc2/jquery.min.js"></script>
 <script src="/js/ajaxfileupload.js"></script>
 <script src="/js/scripts.js"></script>
 <script src="/js/bootstrap/bootstrap.min.js"></script>
