--- a/views/include/top.ejs
+++ b/views/include/top.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/form-elements.css">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="/css/index.css">
     <link rel="shortcut icon" type="image/x-icon" href="//static.miaoowu.com/img/favicon.ico"/>
     <!--[if lt IE 9]>
     <script src="/js/html5shiv.js"></script>
