--- a/views/member/home.ejs
+++ b/views/member/home.ejs
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                         <div class="form-bottom">
-                            <img id="preview-img" src=""/>
+                            <img id="preview-img" class="preview-img" src=""/>
                         </div>
                     </div>
                 </div>
