--- a/views/member/home.ejs
+++ b/views/member/home.ejs
@@ -33,20 +33,20 @@
                         <div class="form-bottom">
                             <div class="input-group input-group-lg">
                                 <span class="input-group-addon">用户名</span>
-                                <span id="playername" class="form-control"><%- username %></span>
+                                <span id="playerName" class="form-control"><%- username %></span>
                             </div>
                             <div class="input-group input-group-lg">
                                 <span class="input-group-addon">&nbsp;&nbsp;皮肤&nbsp;&nbsp;</span>
-                                <span id="Stevemodel" class="form-control">未上传</span>
+                                <span id="skinsModel" class="form-control"><%- skinurl %></span>
                                 <span class="input-group-btn">
-                                    <button id="skinsModel" class="btn btn-blue" type="button">上传</button>
+                                    <button id="skinsModelUpload" class="btn btn-blue" type="button">上传</button>
                                 </span>
                             </div>
                             <div class="input-group input-group-lg">
                                 <span class="input-group-addon">&nbsp;&nbsp;披风&nbsp;&nbsp;</span>
-                                <span id="Capemodel" class="form-control">未上传</span>
+                                <span id="capeModel" class="form-control"><%- capeurl %></span>
                                 <span class="input-group-btn">
-                                    <button id="capeModel" class="btn btn-blue" type="button">上传</button>
+                                    <button id="capeModelUpload" class="btn btn-blue" type="button">上传</button>
                                 </span>
                             </div>
                         </div>
@@ -63,7 +63,7 @@
                             </div>
                         </div>
                         <div class="form-bottom">
-                            <img id="preview-img" class="preview-img" src=""/>
+                            <img id="preview-img" src=""/>
                         </div>
                     </div>
                 </div>
