--- a/public/css/index.css
+++ b/public/css/index.css
@@ -247,6 +247,10 @@ img {
     border-color: #DE615E;
 }
 
+.form-bottom .input-success {
+    border-color: #4AAF51;
+}
+
 .form-control {
     background-color: rgba(0, 0, 0, 0.3);
     color: rgba(255,255,255,0.8);
