ajaxfileupload文件更名 然后把jquery库搬到了本地

--- a/views/include/bottom.ejs
+++ b/views/include/bottom.ejs
@@ -1,5 +1,5 @@
-<script src="http://libs.useso.com/js/jquery/2.1.1-rc2/jquery.min.js"></script>
-<script src="/js/ajaxfileupload.js"></script>
+<script src="/js/jquery-2.1.1.min.js"></script>
+<script src="/js/upload.js"></script>
 <script src="/js/scripts.js"></script>
 <script src="/js/bootstrap/bootstrap.min.js"></script>
 <script src="/js/jquery.backstretch.min.js"></script>
